# fallow

./: .clippy.toml  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  _typos.toml  action.yml  deny.toml  package-lock.json  package.json  schema.json
.claude/: settings.json
.claude/rules/: cli-crate.md  core-crate.md  detection.md  extract-crate.md  lsp-server.md  mcp-server.md  plugins.md  vscode-extension.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  zizmor.yml
.github/workflows/: allocs.yml  bench-real-world.yml  bench.yml  bloat.yml  ci.yml  conformance.yml  coverage.yml  cross-arch.yml  dependabot-auto-merge.yml  ecosystem-full.yml  ecosystem.yml  miri.yml  release.yml  scorecard.yml  test-action.yml
action/jq/: annotations-check.jq  annotations-health.jq  review-comments-check.jq  review-comments-health.jq  summary-check.jq  summary-combined.jq  summary-health.jq
action/scripts/: analyze.sh  review.sh
action/tests/: run.sh
benchmarks/: bench-ci.sh  bench-dupes.mjs  bench.mjs  download-fixtures.mjs
ci/: gitlab-ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: audit.rs  baseline.rs  check.rs  codeowners.rs  combined.rs  dupes.rs  explain.rs  fix.rs  flags.rs  health.rs  health_types.rs  init.rs  lib.rs  list.rs  main.rs  migrate.rs  programmatic.rs  regression.rs  report.rs  schema.rs  setup_hooks.rs  validate.rs  vital_signs.rs  watch.rs
crates/cli/src/check/: filtering.rs  mod.rs  output.rs  rules.rs
crates/cli/src/coverage/: analyze.rs  cloud_client.rs  mod.rs
crates/cli/src/fix/: enum_members.rs  mod.rs
crates/cli/src/health/: coverage.rs  grouping.rs  hotspots.rs  mod.rs  ownership.rs  scoring.rs  targets.rs
crates/cli/src/health_types/: grouped.rs  mod.rs  production_coverage.rs  scores.rs  trends.rs  vital_signs.rs
crates/cli/src/license/: mod.rs
crates/cli/src/migrate/: knip.rs  mod.rs
crates/cli/src/regression/: baseline.rs
crates/cli/src/report/: badge.rs  codeclimate.rs  compact.rs  grouping.rs  json.rs  markdown.rs  mod.rs  sarif.rs  test_helpers.rs
crates/cli/src/report/human/: check.rs  dupes.rs  health.rs  mod.rs  perf.rs  traces.rs
crates/cli/templates/ci/: gitlab-ci.yml
crates/cli/templates/ci/jq/: summary-combined.jq
crates/cli/tests/: changed_since_added_files_tests.rs  changed_workspaces_tests.rs  check_tests.rs  dupes_tests.rs  fix_tests.rs  health_tests.rs  init_tests.rs  list_tests.rs  runtime_coverage_tests.rs  snapshot_tests.rs
crates/cli/tests/snapshots/: health_tests__health_human_complexity.snap  snapshot_tests__codeclimate_circular_deps_only.snap  snapshot_tests__codeclimate_duplicate_exports_only.snap  snapshot_tests__codeclimate_health_with_production_coverage.snap  snapshot_tests__codeclimate_mixed_severity.snap  snapshot_tests__codeclimate_multiple_exports_same_file.snap  snapshot_tests__codeclimate_output.snap  snapshot_tests__codeclimate_re_export_variant.snap  snapshot_tests__codeclimate_type_only_deps.snap  snapshot_tests__codeclimate_unlisted_deps_only.snap  snapshot_tests__codeclimate_unresolved_imports_only.snap  snapshot_tests__codeclimate_unused_class_members_only.snap  snapshot_tests__codeclimate_unused_deps_only.snap  snapshot_tests__codeclimate_unused_dev_deps_only.snap  snapshot_tests__codeclimate_unused_enum_members_only.snap  snapshot_tests__codeclimate_unused_exports_only.snap  snapshot_tests__codeclimate_unused_files_only.snap  snapshot_tests__codeclimate_unused_optional_deps_only.snap  snapshot_tests__codeclimate_unused_types_only.snap  snapshot_tests__codeclimate_workspace_deps.snap  snapshot_tests__compact_empty.snap  snapshot_tests__compact_output.snap  snapshot_tests__grouped_duplication_json_directory.snap  snapshot_tests__json_circular_deps_only.snap  snapshot_tests__json_duplicate_exports_only.snap  snapshot_tests__json_empty.snap  snapshot_tests__json_health_with_production_coverage.snap  snapshot_tests__json_health_with_runtime_coverage.snap  snapshot_tests__json_mixed_severity.snap  snapshot_tests__json_multiple_exports_same_file.snap  snapshot_tests__json_output.snap  snapshot_tests__json_re_export_variant.snap  snapshot_tests__json_type_only_deps.snap  snapshot_tests__json_unlisted_deps_only.snap  snapshot_tests__json_unresolved_imports_only.snap  snapshot_tests__json_unused_class_members_only.snap  snapshot_tests__json_unused_deps_only.snap  snapshot_tests__json_unused_dev_deps_only.snap  snapshot_tests__json_unused_enum_members_only.snap  snapshot_tests__json_unused_exports_only.snap  (+35 more)
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  resolve.rs
crates/graph/src/graph/: build.rs  cycles.rs  mod.rs  re_exports.rs  reachability.rs  types.rs
crates/graph/src/graph/re_exports/: mod.rs  propagate.rs  tests.rs
crates/graph/src/resolve/: dynamic_imports.rs  fallbacks.rs  mod.rs  path_info.rs  re_exports.rs  react_native.rs  require_imports.rs  specifier.rs  static_imports.rs  tests.rs  types.rs  upgrades.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: code_actions.rs  code_lens.rs  diagnostics.rs  hover.rs  main.rs
crates/lsp/src/diagnostics/: mod.rs  quality.rs  structural.rs  unused.rs
crates/types/: Cargo.toml
crates/types/src/: discover.rs  extract.rs  lib.rs  results.rs  suppress.rs
docs/: backwards-compatibility.md  fallow-compliance.md  output-schema.json  plugin-authoring.md  positioning.md
(+246 files in other folders)
