[package]
name = "fallow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the fallow dead code analyzer"

[[bin]]
name = "fallow"
path = "src/main.rs"

[dependencies]
fallow-core = { workspace = true }
fallow-config = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
