[package]
name = "fallow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for fallow, Rust-native codebase intelligence for TypeScript and JavaScript"
readme = "../../README.md"

[[bin]]
name = "fallow"
path = "src/main.rs"

[[bin]]
name = "stub_sidecar"
path = "src/bin/stub_sidecar.rs"
required-features = ["test-sidecar-key"]

[features]
default = []
# Test-only feature that swaps the sidecar binary-signing verify key and the
# license JWT verify key for deterministic keypairs derived from fixed seeds.
# Used by the end-to-end production-coverage integration tests. MUST NOT be
# enabled in release builds; a compile_error! at
# crates/cli/src/health/coverage.rs guards against that.
test-sidecar-key = []

[dependencies]
fallow-core = { workspace = true }
fallow-config = { workspace = true }
fallow-types = { workspace = true }
fallow-v8-coverage = { version = "2.41.0", path = "../v8-coverage" }
fallow-cov-protocol = "0.3"
fallow-license = { version = "2.41.0", path = "../license" }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
clap = { workspace = true }
dunce = { workspace = true }
globset = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true }
notify-debouncer-mini = { workspace = true }
tempfile = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
rustc-hash = { workspace = true }
oxc_coverage_instrument = { workspace = true }
srcmap-sourcemap = "0.3.5"
ureq = { workspace = true }
url = "2"
http = "1"
xxhash-rust = { workspace = true }

[lib]
name = "fallow_cli"
path = "src/lib.rs"
doctest = false

[dev-dependencies]
toml = { workspace = true }
insta = { workspace = true }
fallow-types = { workspace = true }
oxc_span = { workspace = true }
proptest = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
fallow-cov-protocol = "0.3"

[package.metadata.cargo-shear]
ignored = ["miette"] # feature-only dep: activates fancy rendering for fallow-config's miette::Report

[lints]
workspace = true
