[package]
name = "fallow-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server for fallow codebase intelligence (diagnostics, code actions, hover, code lens)"
publish = false

[[bin]]
name = "fallow-lsp"
path = "src/main.rs"

[dependencies]
fallow-core = { workspace = true }
fallow-config = { workspace = true }
tower-lsp = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", default-features = false, features = ["util"] }

[lints]
workspace = true
