[package]
name = "fallow-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types for the fallow dead code analyzer"

[dependencies]
# Serialization
serde = { workspace = true }

# AST spans (for ExportInfo, ImportInfo, etc.)
oxc_span = { workspace = true }

# Cache serialization (for MemberAccess)
bincode = { workspace = true }

[lints]
workspace = true
